--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">    
+        <title>Dogs</title>
+        <link rel="stylesheet" href="style.css">  
+        <meta charset="UTF-8">  
     </head>
         <body>
             <header>
