--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
   <div class="container">
-    <section id="section1">
+    <section class="section active"  id="section1">
       <h2>Секция 1</h2>
       <p>Содержимое секции 1.</p>
     </section>
-    <section id="section2">
+    <section class="section" id="section2">
       <h2>Секция 2</h2>
       <p>Содержимое секции 2.</p>
     </section>
-    <section id="section3">
+    <section class="section" id="section3">
       <h2>Секция 3</h2>
       <p>Содержимое секции 3.</p>
     </section>
-    <section id="section4">
+    <section class="section" id="section4">
       <h2>Секция 4</h2>
       <p>Содержимое секции 4.</p>
     </section>
-    <section id="section5">
+    <section class="section" id="section5">
       <h2>Секция 5</h2>
       <p>Содержимое секции 5.</p>
     </section>
